--- a/templates/index.html
+++ b/templates/index.html
@@ -28,19 +28,19 @@
 										<!--<a href="/" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Home</a>
 									        <a href="accounts/contact" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Contact</a>-->
                                                                                 {% if user.is_authenticated %} 
-                                                                                 <a href="accounts/logout" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Logout</a>
-                                                                                 <a href="accounts/contact" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Contact</a>
-                                                                                  <a href="accounts/trashdetection" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Pinpoint</a>
-                                                                                <a href="https://aboutpurifynature.glitch.me" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Hello, {{user.first_name}}</a>
+                                                                                 <a href="accounts/logout" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:30px; margin-right:20px;">Logout</a>
+                                                                                 <a href="accounts/contact" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:30px;">Contact</a>
+                                                                                  <a href="accounts/trashdetection" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:30px;">Pinpoint</a>
+                                                                                <a href="https://aboutpurifynature.glitch.me" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:30px;">Hello, {{user.first_name}}</a>
                                                                                  
 	                                                                         
                                                                                   
                                                                                 {% else %}
                                                                                  
-                                                                                 <a href="accounts/login" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Login</a>
-                                                                                <a href="accounts/register" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Register</a>
-										<a href="accounts/contact" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">Contact</a>	
-								                 <a href="https://aboutpurifynature.glitch.me" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:50px;">About</a>
+                                                                                 <a href="accounts/login" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:30px; margin-right:20px;">Login</a>
+                                                                                <a href="accounts/register" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:30px;">Register</a>
+										<a href="accounts/contact" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:30px;">Contact</a>	
+								                 <a href="https://aboutpurifynature.glitch.me" class="w3-hide-small w3-bar-item w3-button w3-mobile w3-large w3-right" style="margin-top:30px;">About</a>
                                                                                 {% endif %}
                                                                                  
 
